# DBusFileSharing

./: CMakeLists.txt  readme.md  sharing.cpp  sharing.hpp
data/: dbus-sharing.conf  sharing.ini
